# libq7zip

./: .gitignore  CMakeLists.txt  Q7ZipConfig.cmake.in  README.md  q7zip.pro
.github/workflows/: cmake.yml
7zip/: 7zdefs.cmake  7zip.pri  7zip.pro  CMakeLists.txt
7zip/unix/: CMakeLists.txt
7zip/unix/C/: C.cmake
7zip/unix/CPP/7zip/: 7zip.cmake
7zip/unix/CPP/7zip/Archive/: Archive.cmake
7zip/unix/CPP/7zip/Archive/7z/: 7z.cmake
7zip/unix/CPP/7zip/Archive/Common/: Common.cmake
7zip/unix/CPP/7zip/Common/: Common.cmake
7zip/unix/CPP/7zip/Compress/: Compress.cmake
7zip/unix/CPP/7zip/UI/Common/: Common.cmake
7zip/unix/CPP/7zip/UI/Console/: Console.cmake
7zip/unix/CPP/Common/: Common.cmake
7zip/unix/CPP/Windows/: Windows.cmake
7zip/unix/CPP/include_windows/: include_windows.cmake
7zip/unix/CPP/myWindows/: myCommandLineParser.cpp  myDateAndTime.cpp  myWindows.cmake
7zip/win/: CMakeLists.txt
7zip/win/C/: C.cmake
7zip/win/CPP/7zip/: 7zip.cmake
7zip/win/CPP/7zip/Archive/: Archive.cmake
7zip/win/CPP/7zip/Archive/7z/: 7z.cmake
7zip/win/CPP/7zip/Archive/Common/: Common.cmake
7zip/win/CPP/7zip/Common/: Common.cmake
7zip/win/CPP/7zip/Compress/: Compress.cmake
7zip/win/CPP/7zip/UI/Common/: Common.cmake
7zip/win/CPP/7zip/UI/Console/: Console.cmake
7zip/win/CPP/Common/: Common.cmake
7zip/win/CPP/Windows/: Windows.cmake
q7z/: CMakeLists.txt  q7z.pro  q7z_create.h  q7z_errors.h  q7z_extract.h  q7z_facade.cpp  q7z_facade.h  q7z_fileio.cpp  q7z_fileio.h  q7z_global.h  q7z_guid.h  q7z_list.h  q7z_range.h
tests/: CMakeLists.txt  data.qrc  testdata.7z  testq7z.cpp  tests.pro
