set ( obj7z_SOURCES )
include(${7ZIP_BASE}/C/C.cmake)
include(${7ZIP_BASE}/CPP/7zip/7zip.cmake)
include(${7ZIP_BASE}/CPP/7zip/Archive/7z/7z.cmake)
include(${7ZIP_BASE}/CPP/7zip/Archive/Archive.cmake)
include(${7ZIP_BASE}/CPP/7zip/Archive/Common/Common.cmake)
include(${7ZIP_BASE}/CPP/7zip/Common/Common.cmake)
include(${7ZIP_BASE}/CPP/7zip/Compress/Compress.cmake)
include(${7ZIP_BASE}/CPP/7zip/UI/Common/Common.cmake)
include(${7ZIP_BASE}/CPP/7zip/UI/Console/Console.cmake)
include(${7ZIP_BASE}/CPP/Common/Common.cmake)
include(${7ZIP_BASE}/CPP/Windows/Windows.cmake)

add_library(obj7z OBJECT ${obj7z_SOURCES})
get_target_property(QtCore_headers Qt5::Core INTERFACE_INCLUDE_DIRECTORIES)
target_include_directories(obj7z PRIVATE ${QtCore_headers})
set_target_properties( obj7z PROPERTIES POSITION_INDEPENDENT_CODE ON)
